# aptdemod

./: .gitignore  CMakeLists.txt  Makefile  README.md
documentation/: how_apt_works.txt
documentation/output/plots/: 11025_am_demod.txt  11025_base.txt  11025_filter_am_demod.txt  11025_frequency_filter.txt  11025_mag_am_demod.txt  11025_real_am_demod.txt  11025_real_signal.txt  after_fft.txt  after_fft_11025.txt  after_fft_11025_negative.txt  after_fft_11025_real_signal.txt  before_fft_11025_real_signal.txt
include/: .gitkeep  algebra.h  apt.h  audio.h  demod.h  image.h  packet.h  utils.h
output/text/: 11025_am_demod.txt
plot/src/: graph.py  main.py
src/: algebra.c  apt.c  image.c  main.c  utils.c
src-core/: audio.c  demod.c  image.c  main.c  utils.c
src-plot/: graph.py  main.py
test/: Testdemod.c
